2003-1-12 Albert Chu <chu11@llnl.gov>

    * etc/ipmipower.dev: Fixed regex typo, it should now compile.

2003-01-10 Jim Garlick <garlick@llnl.gov>

    * src/parse.y: allow hostlists in the 'plug name' field of a node
    specification, e.g. this now works:
      node "thunder[0-63]" "i0" "pthunder[0-63]"

    * etc/ipmipower.dev: Last regex didn't compile - try this one?

    * powerman.spec: fix test in %post scriptlet

2003-01-09 Albert Chu <chu11@llnl.gov>

    * etc/ipmipower.dev: Added additional expressions that result
    in powerman returning an unknown state.
	
2003-12-22 Jim Garlick <garlick@llnl.gov>

    * etc/ibmh8.dev: Fixed regular expression bug in status_all script.

2003-12-22 Albert Chu <chu11@llnl.gov>

    * etc/ipmipower.dev: Removed "not discovered" as acceptable message to 
    indicate power is off.  Power status should be unknown.  Fixed regular 
    expression bug in status_all script.
	
2003-12-22 Jim Garlick <garlick@llnl.gov>

    * src/arglist.[ch]: Fixed thinko in arglist_get prototype.

2003-12-21 Jim Garlick <garlick@llnl.gov>

    * src/arglist.[ch]: New.  Pulled content from device.c and tried to
    abstract more effectively.  Make it possible to preserve order of
    arglist despite the use of a hash table for efficiency.

    * src/device.c, src/client.c: use new arglist interfaces.

    * : tag powerman-1-0-19-argval

2003-12-19 Jim Garlick <garlick@llnl.gov>

    * Makefile, powerman.spec, man/powerman.1: remove 'on' and 'off' sym links.

    * etc/README: added statement description.

    * powerman.spec: post scriptlet stops and restarts powerman, if it was
    running.
   
    * etc/powerman.dev: New.

2003-12-17 Jim Garlick <garlick@llnl.gov>

    * src/device.c: remove _verify_plugassign (hold over from when we had
    setplugname commands in scripts).

    * src/device_pipe.c: assert no string overflow from forkpty().

2003-12-08 Jim Garlick <garlick@llnl.gov>
