@@ -1,3 +1,7 @@
+2003-1-12 Jim Garlick <garlick@llnl.gov>
+
+    * src/arglist.[ch], src/device.c: further cleanup of arglist abstraction
+
 2003-1-12 Albert Chu <chu11@llnl.gov>
 
     * etc/ipmipower.dev: Fixed regex typo, it should now compile.
